objects/Release_Platform__c.object
<CustomObject>
    <description>Product Release Platforms</description>
    <fields>
        <fullName>CPM_ID__c</fullName>
        <externalId>true</externalId>
        <label>CPM ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <label>GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OS__c</fullName>
        <label>OS</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform_CPM_ID__c</fullName>
        <label>Platform CPM ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Release_CPM_ID__c</fullName>
        <label>Release CPM ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Release Platforms</relationshipLabel>
        <relationshipName>Release_Platforms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Release Platform</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Release__c</columns>
        <columns>OS__c</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>contains</operation>
            <value>ICADV12.2.500.1</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Release Platform Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Release Platforms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>